--- a/spring-batch-docs/asciidoc/jsr-352.adoc
+++ b/spring-batch-docs/asciidoc/jsr-352.adoc
@@ -6,7 +6,9 @@
 
 == JSR-352 Support
 
+ifndef::onlyonetoggle[]
 include::toggle.adoc[]
+endif::onlyonetoggle[]
 
 As of Spring Batch 3.0 support for JSR-352 has been fully implemented. This section is not a replacement for
         the spec itself and instead, intends to explain how the JSR-352 specific concepts apply to Spring Batch.
@@ -66,7 +68,7 @@ The base context is not processed by the JSR-352 processors for things like prop
 
 JSR-352 requires a very simple path to executing a batch job.  The following code is all that is needed to
 				execute your first batch job:
-			
+
 
 
 [source, java]
@@ -78,7 +80,7 @@ jobOperator.start("myJob", new Properties());
 While that is convenient for developers, the devil is in the details.  Spring Batch bootstraps a bit of
 				infrastructure behind the scenes that a developer may want to override.  The following is bootstrapped the
 				first time `BatchRuntime.getJobOperator()` is called:
-				
+
 |===============
 |__Bean Name__|__Default Configuration__|__Notes__
 |
@@ -87,10 +89,10 @@ While that is convenient for developers, the devil is in the details.  Spring Ba
 									Apache DBCP BasicDataSource with configured values.
 								|
 									By default, HSQLDB is bootstrapped.
-								
+
 |`transactionManager`|`org.springframework.jdbc.datasource.DataSourceTransactionManager`|
 									References the dataSource bean defined above.
-								
+
 |
 									A Datasource initializer
 								||
@@ -98,7 +100,7 @@ While that is convenient for developers, the devil is in the details.  Spring Ba
 									`batch.drop.script` and `batch.schema.script` properties.  By
 									default, the schema scripts for HSQLDB are executed.  This behavior can be disabled via
 									`batch.data.source.init` property.
-								
+
 |
 									jobRepository
 								|
@@ -107,32 +109,32 @@ While that is convenient for developers, the devil is in the details.  Spring Ba
 									This `JobRepository` uses the previously mentioned data source and transaction
 									manager.  The schema's table prefix is configurable (defaults to BATCH_) via the
 									`batch.table.prefix` property.
-								
+
 |
 									jobLauncher
 								|`org.springframework.batch.core.launch.support.SimpleJobLauncher`|
 									Used to launch jobs.
-								
+
 |
 									batchJobOperator
 								|`org.springframework.batch.core.launch.support.SimpleJobOperator`|
 									The `JsrJobOperator` wraps this to provide most of it's functionality.
-								
+
 |
 									jobExplorer
 								|`org.springframework.batch.core.explore.support.JobExplorerFactoryBean`|
 									Used to address lookup functionality provided by the `JsrJobOperator`.
-								
+
 |
 									jobParametersConverter
 								|`org.springframework.batch.core.jsr.JsrJobParametersConverter`|
 									JSR-352 specific implementation of the `JobParametersConverter`.
-								
+
 |
 									jobRegistry
 								|`org.springframework.batch.core.configuration.support.MapJobRegistry`|
 									Used by the `SimpleJobOperator`.
-								
+
 |
 									placeholderProperties
 								|`org.springframework.beans.factory.config.PropertyPlaceholderConfigure`|
@@ -140,13 +142,13 @@ While that is convenient for developers, the devil is in the details.  Spring Ba
 									the properties mentioned above.  ENVIRONMENT is a System property (defaults to hsql)
 									that can be used to specify any of the supported databases Spring Batch currently
 									supports.
-								
+
 
 |===============
 
 
 
-			
+
 
 
 [NOTE]
@@ -249,7 +251,7 @@ To use the thread context class loader approach, all you need to do is provide t
         <batchlet ref="io.spring.FooBatchlet" />
     </step>
 </job>
-        
+
 ----
 
 [[jsrJobProperties]]
@@ -335,7 +337,7 @@ this example, the result will resolve to a value of the system property file.sep
 #{jobParameters['unresolving.prop']} is assumed to not be resolvable. If neither expressions can be
 resolved, an empty String will be returned. Multiple conditions can be used, which are separated by a
 ';'.
-            
+
 
 [[jsrProcessingModels]]
 
@@ -345,7 +347,7 @@ resolved, an empty String will be returned. Multiple conditions can be used, whi
 JSR-352 provides the same two basic processing models that Spring Batch does:
 
 
-            
+
 * Item based processing - Using an `javax.batch.api.chunk.ItemReader`, an
                         optional `javax.batch.api.chunk.ItemProcessor`, and an
                         `javax.batch.api.chunk.ItemWriter`.
@@ -357,7 +359,7 @@ JSR-352 provides the same two basic processing models that Spring Batch does:
                         currently available.
 
 
-        
+
 
 
 
@@ -367,7 +369,7 @@ Item based processing in this context is a chunk size being set by the number of
                 `ItemReader`.  To configure a step this way, specify the
                 `item-count` (which defaults to 10) and optionally configure the
                 `checkpoint-policy` as item (this is the default).
-            
+
 
 
 [source, xml]
@@ -388,7 +390,7 @@ If item based checkpointing is chosen, an additional attribute `time-limit` is
     supported.  This sets a time limit for how long the number of items specified has to be processed.  If
     the timeout is reached, the chunk will complete with however many items have been read by then
     regardless of what the `item-count` is configured to be.
-            
+
 
 
 
@@ -402,7 +404,7 @@ JSR-352 calls the process around the commit interval within a step "checkpointin
                 implementation of `CheckpointAlgorithm`, configure your step with the custom
                 `checkpoint-policy` as shown below where fooCheckpointer refers to an
                 implementation of `CheckpointAlgorithm`.
-            
+
 
 
 [source, xml]
@@ -436,18 +438,18 @@ The entrance to executing a JSR-352 based job is through the
 
 JobOperator jobOperator = BatchRuntime.getJobOperator();
 long jobExecutionId = jobOperator.start("fooJob", new Properties());
-        
+
 ----
 
 The above code does the following:
 
 
-            
+
 * Bootstraps a base `ApplicationContext` - In order to provide batch functionality, the framework
                         needs some infrastructure bootstrapped.  This occurs once per JVM.  The components that are
                         bootstrapped are similar to those provided by `@EnableBatchProcessing`.
                         Specific details can be found in the javadoc for the `JsrJobOperator`.
-                    
+
 
 
 * Loads an `ApplicationContext` for the job requested - In the example
@@ -459,7 +461,7 @@ The above code does the following:
                         `JobExecution's` id will be returned.
 
 
-        
+
 
 
 [NOTE]
@@ -474,7 +476,7 @@ When `JobOperator#start` is called using `SimpleJobOperator`,
             framework will always create a new JobInstance (JSR-352 job parameters are
             non-identifying).  In order to restart a job, a call to
             `JobOperator#restart(long executionId, Properties restartParameters)` is required.
-        
+
 
 [[jsrContexts]]
 
@@ -496,7 +498,7 @@ To obtain a reference to the `JobContext` or `StepContext`
 ----
 @Inject
 JobContext jobContext;
-        
+
 ----
 
 
@@ -522,7 +524,7 @@ Within a JSR-352 based job, the flow of steps works similarly as it does within 
             However, there are a few subtle differences:
 
 
-            
+
 * Decision's are steps - In a regular Spring Batch job, a decision is a state that does not
                         have an independent `StepExecution` or any of the rights and
                         responsibilities that go along with being a full step..  However, with JSR-352, a decision
@@ -541,7 +543,7 @@ Within a JSR-352 based job, the flow of steps works similarly as it does within 
                         evaluate transition elements in the order they are specified in the XML.
 
 
-        
+
 
 [[jsrScaling]]
 
@@ -550,7 +552,7 @@ Within a JSR-352 based job, the flow of steps works similarly as it does within 
 
 Traditional Spring Batch jobs have four ways of scaling (the last two capable of being executed across
             multiple JVMs):
-            
+
 * Split - Running multiple steps in parallel.
 
 
@@ -563,18 +565,18 @@ Traditional Spring Batch jobs have four ways of scaling (the last two capable of
 * Remote Chunking - Executing the processor piece of logic remotely.
 
 
-        
+
 
 JSR-352 provides two options for scaling batch jobs.  Both options support only a single JVM:
-            
+
 * Split - Same as Spring Batch
 
 
 * Partitioning - Conceptually the same as Spring Batch however implemented slightly different.
-                    
 
 
-        
+
+
 
 [[jsrPartitioning]]
 
@@ -584,7 +586,7 @@ JSR-352 provides two options for scaling batch jobs.  Both options support only 
 Conceptually, partitioning in JSR-352 is the same as it is in Spring Batch.  Meta-data is provided
                 to each slave to identify the input to be processed with the slaves reporting back to the master the
                 results upon completion.  However, there are some important differences:
-                
+
 * Partitioned `Batchlet` - This will run multiple instances of the
                             configured `Batchlet` on multiple threads.  Each instance will have
                             it's own set of properties as provided by the JSL or the
@@ -595,7 +597,7 @@ Conceptually, partitioning in JSR-352 is the same as it is in Spring Batch.  Met
                             `ExecutionContext` is provided for each partition.  With JSR-352, a
                             single `javax.batch.api.partition.PartitionPlan` is provided with an
                             array of `Properties` providing the meta-data for each partition.
-                        
+
 
 
 * `PartitionMapper` - JSR-352 provides two ways to generate partition
@@ -625,7 +627,7 @@ via the `JobExplorer` and Spring Batch Admin.
                             handle compensating logic if something goes wrong.  However, since the slaves JSR-352
                             provides a collection of other components for the ability to provide compensating logic when
                             errors occur and to dynamically set the exit status.  These components include the following:
-                            
+
 |===============
 |__Artifact Interface__|__Description__
 |`javax.batch.api.partition.PartitionCollector`|Provides a way for slave steps to send information back to the
@@ -648,4 +650,3 @@ Since all JSR-352 based jobs are executed asynchronously, it can be difficult to
             `org.springframework.batch.core.jsr.JsrTestUtils`.  This utility class provides the
             ability to start a job and restart a job and wait for it to complete.  Once the job completes, the
             associated `JobExecution` is returned.
-
