--- a/spring-batch-docs/asciidoc/toggle.adoc
+++ b/spring-batch-docs/asciidoc/toggle.adoc
@@ -1,42 +1,11 @@
 ifdef::backend-html5[]
 +++
-<div class="toggleWidget">
-	<script src="./jsfiles/jquery.js"></script>
-	<script src="./jsfiles/underscore.js"></script>
-	<script src="./jsfiles/backbone.js"></script>
-	<script src="./jsfiles/js.cookie.js"></script>
-	<script src="./jsfiles/projectDocumentationWidget.js"></script>
-	<script src="./jsfiles/application.js"></script>
-	<div code-widget-controls="" style="display: inline-block">
-	<div class="item-slider-widget js-item-slider--wrapper">
-			<div class="item-slider--container">
-				<div class="item--slider js-item--slider"
-					 style="width: 57px; margin-left: 0.01555px;"></div>
-				<div class="item js-item" data-snippet-type="java">
-					Java
-				</div>
-				<div class="item js-item" data-snippet-type="xml">
-					XML
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="code-widget--body">
-		<div class="js-code-maven-widget"></div>
-	</div>
-	<script type="text/html" id="code-widget-controls-template">
-		<div class="item-slider-widget js-item-slider--wrapper">
-			<div class="item-slider--container">
-				<div class="item--slider js-item--slider"></div>
-				<div class="item js-item java_snip_item" data-snippet-type='java'>
-					Java
-				</div>
-				<div class="item js-item xml_snip_item" data-snippet-type='xml'>
-					XML
-				</div>
-			</div>
-		</div>
-	</script>
+<div>
+  <script type="text/javascript" src="jsfiles/jquery-3.2.1.min.js"></script>
+  <script type="text/javascript" src="jsfiles/DocumentToggle.js"></script>
+  <input id="xmlButton" type="radio" name="docToggle" value="XML"><label for="xmlButton" style="display:inline; margin-left:.5em; margin-right:1em">XML</label>
+  <input id="javaButton" type="radio" name="docToggle" value="Java"><label for="javaButton" style="display:inline; margin-left:.5em; margin-right:1em">Java</label>
+  <input id="bothButton" type="radio" name="docToggle" value="Both" checked><label for="bothButton" style="display:inline; margin-left:.5em">Both</label>
 </div>
 +++
 endif::backend-html5[]
