--- a/spring-batch-docs/asciidoc/spring-batch-intro.adoc
+++ b/spring-batch-docs/asciidoc/spring-batch-intro.adoc
@@ -6,8 +6,6 @@
 
 == Spring Batch Introduction
 
-include::toggle.adoc[]
-
 Many applications within the enterprise domain require bulk processing to perform
 business operations in mission critical environments. These business operations include:
 
@@ -143,36 +141,47 @@ which is its own library).
 
 The following key principles, guidelines, and general considerations should be considered
 when building a batch solution.
+
 * Remember that a batch architecture typically affects on-line architecture and vice
 versa. Design with both architectures and environments in mind using common building
 blocks when possible.
+
 * Simplify as much as possible and avoid building complex logical structures in single
 batch applications.
+
 * Keep the processing and storage of data physically close together (in other words, keep
 your data where your processing occurs).
+
 * Minimize system resource use, especially I/O. Perform as many operations as possible in
 internal memory.
+
 * Review application I/O (analyze SQL statements) to ensure that unnecessary physical I/O
-is avoided.  In particular, the following four common flaws need to be looked for:
+is avoided. In particular, the following four common flaws need to be looked for:
 ** Reading data for every transaction when the data could be read once and cached or kept
 in the working storage.
 ** Rereading data for a transaction where the data was read earlier in the same
 transaction.
 ** Causing unnecessary table or index scans.
 ** Not specifying key values in the WHERE clause of an SQL statement.
+
 * Do not do things twice in a batch run. For instance, if you need data summarization for
 reporting purposes, you should (if possible) increment stored totals when data is being
 initially processed, so your reporting application does not have to reprocess the same
 data.
+
 * Allocate enough memory at the beginning of a batch application to avoid time-consuming
 reallocation during the process.
+
 * Always assume the worst with regard to data integrity. Insert adequate checks and
 record validation to maintain data integrity.
+
 * Implement checksums for internal validation where possible. For example, flat files
 should have a trailer record telling the total of records in the file and an aggregate of
 the key fields.
+
 * Plan and execute stress tests as early as possible in a production-like environment
 with realistic data volumes.
+
 * In large batch systems, backups can be challenging, especially if the system is running
 concurrent with on-line on a 24-7 basis. Database backups are typically well taken care
 of in the on-line design, but file backups should be considered to be just as important.
@@ -304,7 +313,7 @@ record contention and therefore either a physical or logical lock needs to be ob
 retrieval time. One type of pessimistic logical locking uses a dedicated lock-column in
 the database table. When an application retrieves the row for update, it sets a flag in
 the lock column. With the flag in place, other applications attempting to retrieve the
-same row logically fail. When the application that set the flag updates the row, it also
+same row logically fail. When the application that sets the flag updates the row, it also
 clears the flag, enabling the row to be retrieved by other applications. Please note that
 the integrity of data must be maintained also between the initial fetch and the setting
 of the flag, for example by using db locks (such as `SELECT FOR UPDATE`). Note also that
