--- a/spring-batch-docs/asciidoc/step.adoc
+++ b/spring-batch-docs/asciidoc/step.adoc
@@ -110,7 +110,7 @@ The configuration above includes the only required dependencies to create a item
 step:
 
 * `reader`: The `ItemReader` that provides items for processing.
-* `writer`: The ItemWriter that processes the items provided by the`ItemReader`.
+* `writer`: The `ItemWriter` that processes the items provided by the `ItemReader`.
 
 [role="xmlContent"]
 * `transaction-manager`: Spring's `PlatformTransactionManager` that begins and commits
@@ -155,7 +155,7 @@ The configuration above includes the only required dependencies to create a item
 step:
 
 * `reader`: The `ItemReader` that provides items for processing.
-* `writer`: The ItemWriter that processes the items provided by the `ItemReader`.
+* `writer`: The `ItemWriter` that processes the items provided by the `ItemReader`.
 * `transaction-manager`/`transactionManager`: Spring's `PlatformTransactionManager` that
 begins and commits transactions during processing.
 * `job-repository`/`repository`: The `JobRepository` that periodically stores the
@@ -206,6 +206,7 @@ overridden by the "concreteStep1" `Step`, as shown in the following example:
 [role="xmlContent"]
 The `id` attribute is still required on the step within the job element. This is for two
 reasons:
+
 * The `id` is used as the step name when persisting the `StepExecution`. If the same
 standalone step is referenced in more than one step in the job, an error occurs.
 
@@ -227,7 +228,7 @@ defined without these properties, then the `abstract` attribute should be used. 
 [role="xmlContent"]
 In the following example, the `Step` `abstractParentStep` would not be instantiated if it
 were not declared to be abstract. The `Step`, "concreteStep2", has 'itemReader',
-'itemWriter', and commitInterval=10.
+'itemWriter', and commit-interval=10.
 
 [source, xml, role="xmlContent"]
 ----
@@ -249,15 +250,15 @@ were not declared to be abstract. The `Step`, "concreteStep2", has 'itemReader',
 ===== Merging Lists
 
 [role="xmlContent"]
-Some of the configurable elements on `Steps` are lists. The `<listeners/>` element, for
-instance. If both the parent and child `Steps` declare a `<listeners/>` element, then the
+Some of the configurable elements on `Steps` are lists, such as the `<listeners/>` element.
+If both the parent and child `Steps` declare a `<listeners/>` element, then the
 child's list overrides the parent's. In order to allow a child to add additional
 listeners to the list defined by the parent, every list element has a `merge` attribute.
 If the element specifies that `merge="true"`, then the child's list is combined with the
 parent's instead of overriding it.
 
 [role="xmlContent"]
-In the following example, the `Step`, "concreteStep3", is created with two listeners:
+In the following example, the `Step` "concreteStep3" is created with two listeners:
 `listenerOne` and `listenerTwo`:
 
 [source, xml, role="xmlContent"]
@@ -316,7 +317,7 @@ public Job sampleJob() {
 
 @Bean
 public Step step1() {
-	return this.stepBuilderFactory.get("step1"
+	return this.stepBuilderFactory.get("step1")
 				.<String, String>chunk(10)
 				.reader(itemReader())
 				.writer(itemWriter())
@@ -447,7 +448,7 @@ public Job footballJob() {
 	return this.jobBuilderFactory.get("footballJob")
 				.start(playerLoad())
 				.next(gameLoad())
-				.next(playerSumarization())
+				.next(playerSummarization())
 				.end()
 				.build();
 }
@@ -484,19 +485,19 @@ public Step playerSummarization() {
 
 The preceding example configuration is for a job that loads in information about football
 games and summarizes them. It contains three steps: `playerLoad`, `gameLoad`, and
-`playerSummarization`. The playerLoad `Step` loads player information from a flat file,
-while the gameLoad `Step` does the same for games. The final `Step`,
+`playerSummarization`. The `playerLoad` step loads player information from a flat file,
+while the `gameLoad` step does the same for games. The final step,
 `playerSummarization`, then summarizes the statistics for each player, based upon the
-provided games. It is assumed that the file loaded by 'playerLoad' must be loaded only
-once, but that 'gameLoad' can load any games found within a particular directory,
+provided games. It is assumed that the file loaded by `playerLoad` must be loaded only
+once, but that `gameLoad` can load any games found within a particular directory,
 deleting them after they have been successfully loaded into the database. As a result,
-the playerLoad `Step` contains no additional configuration. It can be started any number
-of times, and, if complete, is skipped. The 'gameLoad' `Step`, however, needs to be run
+the `playerLoad` step contains no additional configuration. It can be started any number
+of times, and, if complete, is skipped. The `gameLoad` step, however, needs to be run
 every time in case extra files have been added since it last ran. It has
 'allow-start-if-complete' set to 'true' in order to always be started. (It is assumed
 that the database tables games are loaded into has a process indicator on it, to ensure
-new games can be properly found by the summarization step). The summarization `Step`,
-which is the most important in the `Job`, is configured to have a start limit of 3. This
+new games can be properly found by the summarization step). The summarization step,
+which is the most important in the job, is configured to have a start limit of 3. This
 is useful because if the step continually fails, a new exit code is returned to the
 operators that control job execution, and it can not start again until manual
 intervention has taken place.
@@ -507,7 +508,7 @@ This job provides an example for this document and is not the same as the `footb
 found in the samples project.
 ====
 
-The remainder of this section describes what happens for each of three runs of the
+The remainder of this section describes what happens for each of the three runs of the
 `footballJob` example.
 
 Run 1:
@@ -529,13 +530,14 @@ processed).
 process indicator) and fails again after 30 minutes.
 
 Run 3:
+
 . `playerLoad` does not run, since it has already completed successfully, and
 `allow-start-if-complete` is 'false' (the default).
 . `gameLoad` runs again and processes another 2 files, loading their contents into the
 'GAMES' table as well (with a process indicator indicating they have yet to be
 processed).
 . `playerSummarization` is not started and the job is immediately killed, since this is
-the third execution of playerSummarization, and its limit is only 2. Either the limit
+the third execution of `playerSummarization`, and its limit is only 2. Either the limit
 must be raised or the `Job` must be executed as a new `JobInstance`.
 
 [[configuringSkip]]
@@ -573,10 +575,10 @@ The following example shows an example of using a skip limit:
 @Bean
 public Step step1() {
 	return this.stepBuilderFactory.get("step1")
-				.faultTolerant()
 				.<String, String>chunk(10)
 				.reader(flatFileItemReader())
 				.writer(itemWriter())
+				.faultTolerant()
 				.skipLimit(10)
 				.skip(FlatFileParseException.class)
 				.build();
@@ -619,10 +621,10 @@ example:
 @Bean
 public Step step1() {
 	return this.stepBuilderFactory.get("step1")
-				.faultTolerant()
 				.<String, String>chunk(10)
 				.reader(flatFileItemReader())
 				.writer(itemWriter())
+				.faultTolerant()
 				.skipLimit(10)
 				.skip(Exception.class)
 				.noSkip(FileNotFoundException.class)
@@ -637,7 +639,7 @@ exception classes to be all `Exceptions` __except__ `FileNotFoundException`. Any
 exception classes is fatal if encountered (that is, they are not skipped).
 
 For any exception encountered, the skippability is determined by the nearest superclass
-in the class hierarchy. Any unclassifed exception is treated as 'fatal'.
+in the class hierarchy. Any unclassified exception is treated as 'fatal'.
 
 ifdef::backend-html5[]
 [role="xmlContent"]
@@ -660,7 +662,7 @@ not all exceptions are deterministic. If a `FlatFileParseException` is encounter
 reading, it is always thrown for that record. Resetting the `ItemReader` does not help.
 However, for other exceptions, such as a `DeadlockLoserDataAccessException`, which
 indicates that the current process has attempted to update a record that another process
-holds a lock on. Waiting and trying again might result in success. In this case, retry
+holds a lock on, waiting and trying again might result in success. In this case, retry
 should be configured as follows:
 
 [source, xml, role="xmlContent"]
@@ -682,11 +684,11 @@ should be configured as follows:
 @Bean
 public Step step1() {
 	return this.stepBuilderFactory.get("step1")
-				.faultTolerant()
 				.<String, String>chunk(2)
-				.retryLimit(3)
 				.reader(itemReader())
 				.writer(itemWriter())
+				.faultTolerant()
+				.retryLimit(3)
 				.retry(DeadlockLoserDataAccessException.class)
 				.build();
 }
@@ -694,7 +696,7 @@ public Step step1() {
 
 The `Step` allows a limit for the number of times an individual item can be retried and a
 list of exceptions that are 'retryable'. More details on how retry works can be found in
-<<step.adoc#retryLogic, retry>>.
+<<retry.adoc#retry, retry>>.
 
 [[controllingRollback]]
 ==== Controlling Rollback
@@ -726,10 +728,10 @@ cause rollback, as shown in the following example:
 @Bean
 public Step step1() {
 	return this.stepBuilderFactory.get("step1")
-				.faultTolerant()
 				.<String, String>chunk(2)
 				.reader(itemReader())
 				.writer(itemWriter())
+				.faultTolerant()
 				.noRollback(ValidationException.class)
 				.build();
 }
@@ -739,7 +741,7 @@ public Step step1() {
 ===== Transactional Readers
 
 The basic contract of the `ItemReader` is that it is forward only. The step buffers
-reader input, so that, in the case of a rollback, the items do not need to be re-read
+reader input, so that in the case of a rollback, the items do not need to be re-read
 from the reader. However, there are certain scenarios in which the reader is built on
 top of a transactional resource, such as a JMS queue. In this case, since the queue is
 tied to the transaction that is rolled back, the messages that have been pulled from the
@@ -766,7 +768,7 @@ public Step step1() {
 				.<String, String>chunk(2)
 				.reader(itemReader())
 				.writer(itemWriter())
-				.readerIsTransactionalQueue(true)
+				.readerIsTransactionalQueue()
 				.build();
 }
 ----
@@ -800,8 +802,8 @@ core documentation]. The following example sets the `isolation`, `propagation`, 
 @Bean
 public Step step1() {
 	DefaultTransactionAttribute attribute = new DefaultTransactionAttribute();
-	attribute.setPropagationBehavior(Propagation.REQUIRED);
-	attribute.setIsolationLevel(Isolation.DEFAULT);
+	attribute.setPropagationBehavior(Propagation.REQUIRED.value());
+	attribute.setIsolationLevel(Isolation.DEFAULT.value());
 	attribute.setTimeout(30);
 
 	return this.stepBuilderFactory.get("step1")
@@ -817,8 +819,8 @@ public Step step1() {
 ==== Registering `ItemStream` with a `Step`
 
 The step has to take care of `ItemStream` callbacks at the necessary points in its
-lifecycle. (For more information on the `ItemStream` interface, see
-<<readersAndWriters.adoc#itemStream,ItemStream>>) This is vital if a step fails and might
+lifecycle (For more information on the `ItemStream` interface, see
+<<readersAndWriters.adoc#itemStream,ItemStream>>). This is vital if a step fails and might
 need to be restarted, because the `ItemStream` interface is where the step gets the
 information it needs about persistent state between executions.
 
@@ -898,7 +900,7 @@ event of a failure.
 Just as with the `Job`, there are many events during the execution of a `Step` where a
 user may need to perform some functionality. For example, in order to write out to a flat
 file that requires a footer, the `ItemWriter` needs to be notified when the `Step` has
-been completed, so that the footer can written. This can be accomplished with one of many
+been completed, so that the footer can be written. This can be accomplished with one of many
 `Step` scoped listeners.
 
 Any class that implements one of the extensions of `StepListener` (but not that interface
@@ -989,8 +991,9 @@ successfully, as shown in the following interface definition:
 ----
 public interface ChunkListener extends StepListener {
 
-    void beforeChunk();
-    void afterChunk();
+    void beforeChunk(ChunkContext context);
+    void afterChunk(ChunkContext context);
+    void afterChunkError(ChunkContext context);
 
 }
 ----
@@ -1003,6 +1006,7 @@ The annotations corresponding to this interface are:
 
 * `@BeforeChunk`
 * `@AfterChunk`
+* `@AfterChunkError`
 
 A `ChunkListener` can be applied when there is no chunk declaration. The `TaskletStep` is
 responsible for calling the `ChunkListener`, so it applies to a non-item-oriented tasklet
@@ -1059,7 +1063,7 @@ The `beforeProcess` method is called before `process` on the `ItemProcessor` and
 handed the item that is to be processed. The `afterProcess` method is called after the
 item has been successfully processed. If there was an error while processing, the
 `onProcessError` method is called. The exception encountered and the item that was
-attempted to be processed is provided, so that they can be logged.
+attempted to be processed are provided, so that they can be logged.
 
 The annotations corresponding to this interface are:
 
@@ -1087,7 +1091,7 @@ public interface ItemWriteListener<S> extends StepListener {
 The `beforeWrite` method is called before `write` on the `ItemWriter` and is handed the
 list of items that is written. The `afterWrite` method is called after the item has been
 successfully written. If there was an error while writing, the `onWriteError` method is
-called. The exception encountered and the item that was attempted to be written is
+called. The exception encountered and the item that was attempted to be written are
 provided, so that they can be logged.
 
 The annotations corresponding to this interface are:
@@ -1248,8 +1252,8 @@ following example:
 public MethodInvokingTaskletAdapter myTasklet() {
 	MethodInvokingTaskletAdapter adapter = new MethodInvokingTaskletAdapter();
 
-	adapter.setTarkgetObject(fooDao());
-	adapter.setTargetMethod(updateFoo);
+	adapter.setTargetObject(fooDao());
+	adapter.setTargetMethod("updateFoo");
 
 	return adapter;
 }
@@ -1329,8 +1333,7 @@ reference the `Tasklet` from the `Step`:
 public Job taskletJob() {
 	return this.jobBuilderFactory.get("taskletJob")
 				.start(deleteFilesInDir())
-				.end()
-				.build;
+				.build();
 }
 
 @Bean
@@ -1428,7 +1431,7 @@ In order to handle more complex scenarios, the Spring Batch namespace allows tra
 elements to be defined within the step element. One such transition is the `next`
 element. Like the `next` attribute, the `next` element tells the `Job` which `Step` to
 execute next. However, unlike the attribute, any number of `next` elements are allowed on
-a given `Step`, and there is no default behavior the case of failure. This means that, if
+a given `Step`, and there is no default behavior in the case of failure. This means that, if
 transition elements are used, then all of the behavior for the `Step` transitions must be
 defined explicitly. Note also that a single step cannot have both a `next` attribute and
 a `transition` element.
@@ -1530,7 +1533,7 @@ preceding XML configuration example references the exit code of `ExitStatus`.
 When using Java configuration, the 'on' method shown in the preceding
 Java configuration example references the exit code of `ExitStatus`.
 
-In English, it says: "go to stepB if the exit code is `FAILED`". By default, the exit
+In English, it says: "go to stepB if the exit code is `FAILED` ". By default, the exit
 code is always the same as the `BatchStatus` for the `Step`, which is why the entry above
 works. However, what if the exit code needs to be different? A good example comes from
 the skip sample job within the samples project:
@@ -1617,7 +1620,7 @@ public Job job() {
 }
 ----
 
-If no transitions are defined for a `Step`, then the `Job`'s statuses is defined as
+If no transitions are defined for a `Step`, then the ``Job``'s statuses is defined as
 follows:
 
 * If the `Step` ends with `ExitStatus` FAILED, then the `BatchStatus` and `ExitStatus` of
@@ -1689,7 +1692,7 @@ public Job job() {
 ===== Failing a Step
 
 Configuring a step to fail at a given point instructs a `Job` to stop with a
-`BatchStatus` of `FAILED`. Unlike end, the failing a `Job` does not prevent the `Job`
+`BatchStatus` of `FAILED`. Unlike end, the failure of a `Job` does not prevent the `Job`
 from being restarted.
 
 [role="xmlContent"]
@@ -1745,7 +1748,7 @@ the step where execution should pick up when the "Job is restarted".
 When using java configuration, the `stopAndRestart` method requires a 'restart' attribute
 that specifies the step where execution should pick up when the "Job is restarted".
 
-In the following scenario, if `step1` finishes with `COMPLETE`, then the job then stops.
+In the following scenario, if `step1` finishes with `COMPLETE`, then the job stops.
 Once it is restarted, execution begins on `step2`.
 
 [source, xml, role="xmlContent"]
@@ -1779,12 +1782,14 @@ in the decision, as shown in the following example:
 ----
 public class MyDecider implements JobExecutionDecider {
     public FlowExecutionStatus decide(JobExecution jobExecution, StepExecution stepExecution) {
-        if (someCondition) {
-            return "FAILED";
+        String status;
+        if (someCondition()) {
+            status = "FAILED";
         }
         else {
-            return "COMPLETED";
+            status = "COMPLETED";
         }
+        return new FlowExecutionStatus(status);
     }
 }
 ----
@@ -1832,15 +1837,15 @@ public Job job() {
 [[split-flows]]
 ==== Split Flows
 
-Every scenario described so far has involved a `Job` that executes its `Steps` one at a
-time in a linear fashion. In addition to this typical style, the Spring Batch also allows
+Every scenario described so far has involved a `Job` that executes its ``Step``s one at a
+time in a linear fashion. In addition to this typical style, Spring Batch also allows
 for a job to be configured with parallel flows.
 
 [role="xmlContent"]
 The XML namespace allows you to use the 'split' element. As the following example shows,
 the 'split' element contains one or more 'flow' elements, where entire separate flows can
 be defined. A 'split' element may also contain any of the previously discussed transition
-elements, such as the 'next' attribute or the 'next', 'end', 'fail', or 'pause' elements.
+elements, such as the 'next' attribute or the 'next', 'end' or 'fail' elements.
 
 [source, xml, role="xmlContent"]
 ----
@@ -1858,7 +1863,7 @@ elements, such as the 'next' attribute or the 'next', 'end', 'fail', or 'pause' 
 
 [role="javaContent"]
 Java based configuration lets you configure splits through the provided builders. As the
-following example shows, the 'split' element contains one or more 'flow' elements,  where
+following example shows, the 'split' element contains one or more 'flow' elements, where
 entire separate flows can be defined. A 'split' element may also contain any of the
 previously discussed transition elements, such as the 'next' attribute or the 'next',
 'end', 'fail', or 'pause' elements.
@@ -1871,7 +1876,7 @@ public Job job() {
 			.start(step1())
 			.next(step2())
 			.build();
-	Flow flow2 = new FlowBuilder<SimpleFlow>("flow1")
+	Flow flow2 = new FlowBuilder<SimpleFlow>("flow2")
 			.start(step3())
 			.build();
 
@@ -1892,7 +1897,7 @@ Part of the flow in a job can be externalized as a separate bean definition and 
 re-used. There are two ways to do so. The first is to simply declare the flow as a
 reference to one defined elsewhere, as shown in the following example:
 
-.XML Confguration
+.XML Configuration
 [source, xml, role="xmlContent"]
 ----
 <job id="job">
@@ -1906,7 +1911,7 @@ reference to one defined elsewhere, as shown in the following example:
 </flow>
 ----
 
-.Java Confguration
+.Java Configuration
 [source, java, role="javaContent"]
 ----
 @Bean
@@ -1965,9 +1970,8 @@ The following Java snippet shows an example of a `JobStep`:
 ----
 @Bean
 public Job jobStepJob() {
-	return this.jobBuilderFactor.get("jobStepJob")
+	return this.jobBuilderFactory.get("jobStepJob")
 				.start(jobStepJobStep1(null))
-				.end()
 				.build();
 }
 
@@ -1991,7 +1995,7 @@ public Job job() {
 public DefaultJobParametersExtractor jobParametersExtractor() {
 	DefaultJobParametersExtractor extractor = new DefaultJobParametersExtractor();
 
-	extractor.setKeys("input.file");
+	extractor.setKeys(new String[]{"input.file"});
 
 	return extractor;
 }
@@ -2018,7 +2022,7 @@ constructs, as shown in the following example:
 <bean id="flatFileItemReader"
       class="org.springframework.batch.item.file.FlatFileItemReader">
     <property name="resource"
-              value="file://outputs/20070122.testStream.CustomerReportStep.TEMP.txt" />
+              value="file://outputs/file.txt" />
 </bean>
 ----
 
@@ -2026,10 +2030,10 @@ constructs, as shown in the following example:
 [source, java, role="javaContent"]
 ----
 @Bean
-public FlatFileItemReaer flatFileItemReader() {
+public FlatFileItemReader flatFileItemReader() {
 	FlatFileItemReader<Foo> reader = new FlatFileItemReaderBuilder<Foo>()
 			.name("flatFileItemReader")
-			.resource(new FileSystemResource("file://outputs/20070122.testStream.CustomerReportStep.TEMP.txt"))
+			.resource(new FileSystemResource("file://outputs/file.txt"))
 			...
 }
 ----
@@ -2060,7 +2064,7 @@ The following Java snippet shows how to read a file name from a property:
 [source, java, role="javaContent"]
 ----
 @Bean
-public FlatFileItemReaer flatFileItemReader(@Value("${input.file.name}") String name) {
+public FlatFileItemReader flatFileItemReader(@Value("${input.file.name}") String name) {
 	return new FlatFileItemReaderBuilder<Foo>()
 			.name("flatFileItemReader")
 			.resource(new FileSystemResource(name))
@@ -2069,12 +2073,13 @@ public FlatFileItemReaer flatFileItemReader(@Value("${input.file.name}") String 
 ----
 
 All that would be required for this solution to work would be a system argument (such as
-`-Dinput.file.name="file://file.txt"`). (Note that, although a
-`PropertyPlaceholderConfigurer` can be used here, it is not necessary if the system
-property is always set because the `ResourceEditor` in Spring already filters and does
-placeholder replacement on system properties.)
+`-Dinput.file.name="file://outputs/file.txt"`).
 
-Often, in a batch setting, it is preferable to parameterize the file name in the
+NOTE: Although a `PropertyPlaceholderConfigurer` can be used here, it is not
+necessary if the system property is always set because the `ResourceEditor` in Spring
+already filters and does placeholder replacement on system properties.
+
+Often, in a batch setting, it is preferable to parametrize the file name in the
 `JobParameters` of the job, instead of through system properties, and access them that
 way. To accomplish this, Spring Batch allows for the late binding of various `Job` and
 `Step` attributes, as shown in the following snippet:
@@ -2123,7 +2128,7 @@ the same way, as shown in the following examples:
 ----
 
 .Java Configuration
-[source, java, role="javalContent"]
+[source, java, role="javaContent"]
 ----
 @StepScope
 @Bean
@@ -2217,7 +2222,7 @@ accessible from the `JobContext` using `#{..}` placeholders. Using this feature,
 properties can be pulled from the job or job execution context and the job parameters, as
 shown in the following examples:
 
-.XML Configurtation
+.XML Configuration
 [source, xml, role="xmlContent"]
 ----
 <bean id="..." class="..." scope="job">
@@ -2233,7 +2238,7 @@ shown in the following examples:
 </bean>
 ----
 
-.Java Configurtation
+.Java Configuration
 [source, java, role="javaContent"]
 ----
 @JobScope
@@ -2271,9 +2276,9 @@ The following example uses the `batch` namespace:
 		  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 		  xsi:schemaLocation="...">
 
-		  <batch:job .../>
-		  ...
-		  </beans>
+<batch:job .../>
+...
+</beans>
 ----
 
 The following example includes a bean that explicitly defines the `JobScope`:
